--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,10 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
+  sqflite: ^2.0.0+3
 
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
