--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,16 +5,7 @@ description: A new Flutter application.
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
+
 version: 1.0.0+1
 
 environment:
@@ -28,10 +19,30 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.2
+  flutter_native_splash: ^1.2.1
+  loading_animations: "^2.1.0"
+
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: true
+
+  color: "#1A237E"
+  image: assets/images/todo.png
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/todo.png"
+  remove_alpha_ios: true
+  character: "My Tasks"
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.1"
 
 
 flutter:
